force-app/main/default/objects/Monthly_Beat_Plan__c/Monthly_Beat_Plan__c.object-meta.xml
<CustomObject>
    <description>Used to plan and manage a salesman’s beat visits for a specific month</description>
    <label>Monthly Beat Plan</label>
    <nameField>
        <label>Monthly Beat Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Beat Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>