force-app/main/default/objects/Monthly_Beat_Plan__c/fields/Beat_Name__c.field-meta.xml
<CustomField>
    <fullName>Beat_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat Name</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Monthly Beat Plans</relationshipLabel>
    <relationshipName>Monthly_Beat_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>