force-app/main/default/objects/Monthly_Beat_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beat_Name__c</columns>
    <columns>Date__c</columns>
    <columns>IsActive__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>